@@ -1,6 +1,8 @@
 devel
 -----
 
+* Fixed Github issue #13632: Query Fails on Upsert with Replace_nth.
+
 * Added a new metrics view to the web UI. This view can be used in a clustered
   environment as well as in a single instance. Metrics are displayed either in
   a tabular format or as plain text (Prometheus Text-based format).
